--- a/FY17Q4/O3653/O3653-3 Deep Dive into Office 365 with the Microsoft Graph API for OneDrive for Business/Completed Projects/Exercise 1/GraphFilesWeb/GraphFilesWeb/GraphFilesWeb.csproj
+++ b/FY17Q4/O3653/O3653-3 Deep Dive into Office 365 with the Microsoft Graph API for OneDrive for Business/Completed Projects/Exercise 1/GraphFilesWeb/GraphFilesWeb/GraphFilesWeb.csproj
@@ -203,8 +203,8 @@
     <Compile Include="Helpers\IAuthProvider.cs" />
     <Compile Include="Helpers\SampleAuthProvider.cs" />
     <Compile Include="Helpers\SDKHelper.cs" />
-    <Compile Include="Models\GraphService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GraphService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="TokenStorage\SessionTokenCache.cs" />
   </ItemGroup>
